# restaurant-api

./: .env.example  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username_and_more.py
api/tests/: test_views.py
test_to_inforce/: asgi.py  settings.py  urls.py  wsgi.py
